2005-06-14  Stephen Deasey  <sdeasey@users.sf.net>

	* Initial import into NaviServer CVS.